# docassemble-EFSPIntegration

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py
.github/: kiln_tests.yml
.github/workflows/: black-action.yml  integration_test.yml  kiln_tests.yml  publish.yml  unittests.yml
docassemble/EFSPIntegration/: __init__.py  code_retrival.py  conversions.py  efm_client.py  integration_test.py  interview_logic.py  py_efsp_client.py  requirements.txt  test_conversions.py  x509_signer.py
docassemble/EFSPIntegration/data/questions/: admin_interview.yml  any_filing_interview.yml  case_search.yml  codes_helper.yml  codes_interview.yml  common_qs.yml  efiling_integration.yml  login_qs.yml  logs_interview.yml  minimal_interview.yml  new_pro_se_user.yml  toga_payments.yml  toga_payments_interview.yml  unauthenticated_actions.yml  unauthenticated_interview.yml
docassemble/EFSPIntegration/data/sources/: admin_interview.feature  any_filing_interview.feature  unauthenticated_interview.feature
docassemble/EFSPIntegration/test/: initial_cook_filing_vars_shorter.json  integration_test.py  opening_affidavit_adams.json  peoria_to_cr.json  temp2.json  test_conversions.py  test_interview_functions.py  test_proxy_conn.py  vars.json
docassemble/TylerEFSP/: efm_client.py
